############################################################################
#
#  src/Inventor/*/common/Makefile.am
#

noinst_LTLIBRARIES = libSoCommon.la

INCLUDES = -I.
LIBS = 

libSoCommon_la_SOURCES = \
	SoAnyFullViewer.cpp \
	SoAnyFullViewer.h \
	SoAnyExaminerViewer.cpp \
	SoAnyExaminerViewer.h \
	SoAnyPlaneViewer.cpp \
	SoAnyPlaneViewer.h \
	ThumbWheel.cpp \
	ThumbWheel.h

