############################################################################
#
#  src/Inventor/*/common/Makefile.am
#

INCLUDES = -I. -I$(top_srcdir)/src -I$(top_builddir)/src
LIBS = 

noinst_LTLIBRARIES = libSoCommon.la

libSoCommon_la_SOURCES = \
	SoAnyFullViewer.cpp \
	SoAnyFullViewer.h \
	SoAnyExaminerViewer.cpp \
	SoAnyExaminerViewer.h \
	SoAnyPlaneViewer.cpp \
	SoAnyPlaneViewer.h \
	ThumbWheel.cpp \
	ThumbWheel.h

